# substratum

./: .gitignore  Cargo.toml  README.md  TODO.txt  changelog.md  ironforest.py  ironforest.pyi  pyproject.toml  substratum.pyi
.github/workflows/: publish.yml
benchmarks/: spatial_decision_tree.py
docs/: aggregate_tree.md  decision_trees.md  spatial.md
py/ironforest/: __init__.py  __init__.pyi  _core.pyi  decision_tree.py  decision_tree.pyi  isolation_forest.py  isolation_forest.pyi  linear_regression.py  linear_regression.pyi  local_regression.py  models.py  models.pyi  random_forest.py
py/ironforest/_core/: __init__.pyi  linalg.pyi  ndutils.pyi  random.pyi  spatial.pyi  stats.pyi
py/ironforest/models/: __init__.py  decision_tree.py  isolation_forest.py  knn.py  local_regression.py  random_forest.py
python/ironforest/: __init__.py  _core.pyi  linear_regression.py  models.py
python/substratum/: __init__.py  linear_regression.py
src/: lib.rs
src/array/: broadcast.rs  constructors.rs  mod.rs  ndarray.rs  shape.rs  stats.rs  storage.rs
src/linalg/: basic.rs  decomposition.rs  eig.rs  mod.rs  solve.rs
src/ops/: arithmetic.rs  mod.rs  scalar.rs  unary.rs
src/projection/: mod.rs  projection_reducer.rs  random_projection.rs
src/python/: array.rs  benchmark.py  bindings_test.py  linalg.rs  mod.rs  ndutils.rs  random.rs  spatial.rs  stats.rs  tree_benchmark.py  tree_engine.rs
src/random/: .gitignore  generator.rs  seed.rs
src/spatial/: agg_tree.rs  ball_tree.rs  brute_force.rs  common.rs  kd_tree.rs  m_tree.rs  mod.rs  rp_tree.rs  spatial.md  spatial_query.rs  vp_tree.rs
src/spatial/queries/: ann.rs  knn.rs  mod.rs
src/spatial/trees/: agg_tree.rs  ball_tree.rs  kd_tree.rs  m_tree.rs  rp_tree.rs  vp_tree.rs
src/stats/: correlation.rs  mod.rs  special.rs  stats.rs
src/tree_engine/: builder.rs  config.rs  ensemble.rs  impurity.rs  mod.rs  node.rs  scoring.rs  tree.rs
tests/: agg_tree_benchmark.py  benchmark.py  benchmark_array.py  correctness_test.py  heatmap.py  knn_benchmark.py  local_regression.py  readme_tests.py  sift-128-euclidean.py  tree_benchmark.py  tree_comparison.py
workflows/: publish.yml
