[package]
name = "ironforest"
version = "0.5.0"
edition = "2024"

[lib]
name = "_core"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "playground"
path = "src/bin/playground.rs"

[dependencies]
pyo3 = "0.27.2"
numpy = "0.27"
rayon = "1.10"
serde = {version = "1.0.228", features = ["derive"]}
rmp-serde = "1.3.1"
num-traits = "0.2.19"

