[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "ironforest"
version = "0.2"
requires-python = ">=3.8"
description = "An library supporting numerical computation and spatial analysis."
readme = "README.md"

[tool.maturin]
features = ["pyo3/extension-module"]
include = ["ironforest.pyi"]
module-name = "ironforest._core"
python-source = "python"
