[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "ironforest"
version = "0.2.2"
requires-python = ">=3.8"
description = "An library supporting numerical computation and spatial analysis."
readme = "README.md"

[tool.maturin]
features = ["pyo3/extension-module"]
include = [
    "py/ironforest/_core.pyi",
    "py/ironforest/__init__.pyi",
    "py/ironforest/decision_tree.pyi",
    "py/ironforest/linear_regression.pyi",
    "py/ironforest/models.pyi",
    "py/ironforest/py.typed"
]
module-name = "ironforest._core"
python-source = "py"
