[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "ironforest"
version = "0.3.0"
requires-python = ">=3.8"
description = "An library supporting array-based computation, spatial analysis and tree-based machine learning."
readme = "README.md"

[tool.maturin]
features = ["pyo3/extension-module"]
include = [
    "py/ironforest/_core.pyi",
    "py/ironforest/__init__.pyi",
    "py/ironforest/decision_tree.pyi",
    "py/ironforest/linear_regression.pyi",
    "py/ironforest/random_forest.pyi",
    "py/ironforest/isolation_forest.pyi",
    "py/ironforest/models.pyi",
    "py/ironforest/py.typed"
]
module-name = "ironforest._core"
python-source = "py"
